Some vague outline of new Chapter 10.

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1991,6 +1991,57 @@ Estimate iteratively the optimal $ECS$ of the Winton-Held two-layer model runnin
 
 
 %---------------------------------------------------------------------
+\chapter{Global variability and climate catastrophes}
+
+
+
+tipping-points
+
+
+Quadratic and qubic
+
+
+\section{Variability when approaching an instability}
+
+
+\begin{equation}
+N=F+\lambda_o T + b T^2
+\end{equation}
+
+\section{Bi-stable climate variability}
+
+
+
+
+\begin{equation}
+N=F+\lambda_o T + b T^2 + c T^3
+\end{equation}
+where, for simplicity we can consider cases with $b=0$. We immediately recognize this as a third order polynomial which may have 1, 2 or 3 roots insofar as $c \ne 0$. 
+
+
+
+\section{Complexity reduces risk of encountering tipping points}
+
+Plant example
+
+Couple 3-4 qubicons
+
+\newpage
+\vspace{1 cm}
+{\setlength{\parindent}{0cm}
+	%\hrule
+	
+	\begin{exercise}
+		Describe, in your own words 
+	\end{exercise}
+	
+}
+
+
+
+
+
+%---------------------------------------------------------------------
 \chapter{The atmospheric water cycle}
 
 The hydrological cycle on Earth is immensely complicated, and really it is a whole scientific field on it's own as water is vital for life on our planet. Water occurs on Earth in three forms: solid, liquid and as a gas. And, throughout this course you may have noticed how water plays multiple roles in shaping the Earth's climate and climate change. Water vapor is the main cause of the Earth's greenhouse effect, and it exerts a strong positive feedback on climate change, clouds might do the same, or the opposite, whereas we know that and snow and ice can reflect sunlight and that by melting amplifies warming. The vast oceans act as the main heat reservoir temporarily damping climate change, and possibly altering the atmospheric circulation and thereby the cloud fields. We haven't talked about precipitation, though, and this will be the topic in this chapter. 
