Added a figure to new chapter 10 for shifts in variability in the linear world.

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1993,13 +1993,27 @@ Estimate iteratively the optimal $ECS$ of the Winton-Held two-layer model runnin
 %---------------------------------------------------------------------
 \chapter{Global variability and climate catastrophes}
 
+Certain aspects of climate change depend mainly on the mean state, for instance thermosteric sea level rise scales foremost with the global mean temperature. However, in many cases it is mainly during weather extremes that we spur the changing climate; 
 
+Shifts of pdf
 
 tipping-points
 
 
 Quadratic and qubic
 
+\section{Variability in a linear world}
+
+Variability in a linear world, shift of pdf, likelyhood of extremes increase dramatically
+
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=15 cm]{../Plots/variability_shift_distribution.pdf}
+	\end{center}
+	\caption{ Caption. } 
+	\label{fig:variability_shift_linear}
+\end{figure}
 
 \section{Variability when approaching an instability}
 
