Inserted figures into stability chapter

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -2002,6 +2002,8 @@ tipping-points
 
 Quadratic and qubic
 
+
+
 \section{Variability in a linear world}
 
 Variability in a linear world, shift of pdf, likelyhood of extremes increase dramatically
@@ -2016,6 +2018,15 @@ Variability in a linear world, shift of pdf, likelyhood of extremes increase dra
 \end{figure}
 
 \section{Variability when approaching an instability}
+
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=15 cm]{../plots/Stability_mlm}
+	\end{center}
+	\caption{ Caption } 
+	\label{fig:bifurc_parabolic}
+\end{figure}
 
 
 \begin{equation}
@@ -2042,6 +2053,17 @@ For the quadratic model, $\alpha$ is dependent on temperature. Our $\lambda$ can
 
 As the system temperature increases, the second-order term becomes increasingly important. For our parameter choice of $\lambda_0 < 0$ and $b > 0$, $\lambda$ becomes less negative with temperature, increasing the value of $\alpha$ towards unity.  
 
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=15 cm]{../plots/Stability_vari_1}
+	\end{center}
+	\caption{ Caption } 
+	\label{fig:variability_shift_parabolic}
+\end{figure}
+
+
+
+
 %\approx 1 - 0.0124 \cdot \lambda
 \section{Bi-stable climate variability}
 
@@ -2053,6 +2075,22 @@ N=F+\lambda_o T + b T^2 + c T^3
 \end{equation}
 where, for simplicity we can consider cases with $b=0$. We immediately recognize this as a third order polynomial which may have 1, 2 or 3 roots insofar as $c \ne 0$. 
 
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=15 cm]{../plots/Stability_qubicon}
+	\end{center}
+	\caption{ Caption } 
+	\label{fig:bi-stable_timeseries}
+\end{figure}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=15 cm]{../plots/Stability_theory}
+	\end{center}
+	\caption{ Caption } 
+	\label{fig:bi-stable_theory}
+\end{figure}
 
 
 \section{Complexity reduces risk of encountering tipping points}
