--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1564,6 +1564,7 @@ The concept of committed warming is useful, I think, in communicating the climat
 	\begin{exercise}
 	Explore impact of aerosol forcing on the $TCR$ and $ECS$ estimates. You can do this by simply adding and subtracting one standard deviation of the aerosol forcing (Table \ref{table:input}). Shortly discuss the results.
 	\end{exercise}
+}
 
 %---------------------------------------------------------------------
 \chapter{State-dependent feedback}
@@ -1993,10 +1994,12 @@ Estimate iteratively the optimal $ECS$ of the Winton-Held two-layer model runnin
 %---------------------------------------------------------------------
 \chapter{Global variability and climate catastrophes}
 
-Certain aspects of climate change depend mainly on the mean state, for instance thermosteric sea level rise scales foremost with the global mean temperature. However, in many cases it is mainly during weather extremes that we spur the changing climate; 
+Certain aspects of climate change depend mainly on the mean state, for instance thermosteric sea level rise scales foremost with the global mean temperature. However, in many cases it is mainly during weather extremes that we spur the changing climate; cold-spells and heat waves imprint themselves in our memory and cause damages. Many of these extremes are associated with absolute thresholds. For instance, most mammals die from heat stress if the wet bulb temperature exceeds around 35$^\circ$C, and extreme precipitation only becomes a severe problem when the water can no longer run off in natural watersheds and existing sewers. The former is a case that hardly ever occurs in the present-day climate, but may become frequent in the future.
+
+Much of this can be understood from simple linear shifts in variability around a mean state. In this case the processes that cause the variability do not depend on the mean state of the system. 
 
 Shifts of pdf
-
+ 
 tipping-points
 
 
