--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -2022,6 +2022,13 @@ Variability in a linear world, shift of pdf, likelyhood of extremes increase dra
 
 \section{Variability when approaching an instability}
 
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=15 cm]{../Plots/Stability_theory_parabolic}
+	\end{center}
+	\caption{ Caption. } 
+	\label{fig:parabolic_theory}
+\end{figure}
 
 \begin{figure}
 	\begin{center}
