Text changes to chapter 10.

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1568,6 +1568,7 @@ The concept of committed warming is useful, I think, in communicating the climat
 
 %---------------------------------------------------------------------
 \chapter{State-dependent feedback}
+\label{chapter:state-dependent}
 In the previous chapters we assumed that perturbations were small enough that feedbacks could be considered approximately constant. However, there are good reasons to think that for even modestly warmer or colder climates  feedback mechanisms could change in strength. 
 It turns out that all the feedbacks, surface albedo, temperature, water vapor and clouds may depend on the climate state, and understanding and quantifying the underlying processes -- and what it means for the interpretation of Earth's past and possible futures -- are subject to ongoing scientific debate. %Thus I will only discuss them qualitatively here. 
 
@@ -1994,6 +1995,13 @@ Estimate iteratively the optimal $ECS$ of the Winton-Held two-layer model runnin
 %---------------------------------------------------------------------
 \chapter{Global variability and climate catastrophes}
 
+
+A climatic catastrophe is sometimes referred to as a forced transition of climate system to a new climate state at a rate which is more rapid than the rate of change of the external forcing ({\em wikipedia}). In this case we may be thinking of some aspect of the climate that is being changed through external forcing at an accelerating rate or all of a sudden over a short period of time. One can also imagine that something which didn't happen before starts to happen. In order to qualify as a catastrophe we usually also think of it having a large negative impact on something, say society or nature, but here that is not so central.
+
+In recent years in particular so-called tipping points have caught attention, the idea being that there are some thresholds in the system whereat it behaves non-linearly such that going back is not as simple as just returning the forcing to what it was before. These involve bifurcations, as we studied them in Chapter \ref{chapter:state-dependent}. These cases we shall model using quadratic and qubic energy balances. 
+
+But also a strong increase in extreme events of some kind would usually be considered catastrophic. 
+
 Shifts of pdf
  
 tipping-points
@@ -2003,9 +2011,10 @@ Quadratic and qubic
 
 
 
-\section{Variability in a linear world}
+\section{Climatic extremes in a linear world}
 
-
+Let us consider natural variability in the mixed-layer model:
+$$ C\frac{dT}{dt} = F + \lambda T + e $$
 
 
 
