Additional text changes.x

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1996,18 +1996,10 @@ Estimate iteratively the optimal $ECS$ of the Winton-Held two-layer model runnin
 \chapter{Global variability and climate catastrophes}
 
 
-A climatic catastrophe is sometimes referred to as a forced transition of climate system to a new climate state at a rate which is more rapid than the rate of change of the external forcing ({\em wikipedia}). In this case we may be thinking of some aspect of the climate that is being changed through external forcing at an accelerating rate or all of a sudden over a short period of time. One can also imagine that something which didn't happen before starts to happen. In order to qualify as a catastrophe we usually also think of it having a large negative impact on something, say society or nature, but here that is not so central.
+A climatic catastrophe is sometimes referred to as a forced transition of climate system to a new climate state at a rate which is more rapid than the rate of change of the external forcing (freely from {\em wikipedia}). In this case we may be thinking of some aspect of the climate that is being changed through external forcing at an accelerating rate or all of a sudden over a short period of time. One can also imagine that something which didn't happen before starts to happen. In order to qualify as a catastrophe we usually also think of it having a large negative impact on something, say society or nature, but here that is not so central.
 
 In recent years in particular so-called tipping points have caught attention, the idea being that there are some thresholds in the system whereat it behaves non-linearly such that going back is not as simple as just returning the forcing to what it was before. These involve bifurcations, as we studied them in Chapter \ref{chapter:state-dependent}. These cases we shall model using quadratic and qubic energy balances. 
-
-But also a strong increase in extreme events of some kind would usually be considered catastrophic. 
-
-Shifts of pdf
- 
-tipping-points
-
-
-Quadratic and qubic
+But also a strong increase in extreme events of some kind would usually be considered catastrophic even if this would not necessarily involve a bifurcation. We shall consider this case first as it can be modeled using the linear mixed-layer model.
 
 
 
@@ -2119,11 +2111,9 @@ where, for simplicity we can consider cases with $b=0$. We immediately recognize
 \end{figure}
 
 
-\section{Complexity reduces risk of encountering tipping points}
-
-Plant example
-
-Couple 3-4 qubicons
+%\section{Complexity reduces risk of encountering tipping points}
+%Plant example
+%Couple 3-4 qubicons
 
 \newpage
 \vspace{1 cm}
