Changes to parabolic section Chpater 10

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -2054,7 +2054,7 @@ Variability in a linear world, shift of pdf, likelyhood of extremes increase dra
 	\label{fig:variability_shift_linear}
 \end{figure}
 
-\section{Variability when approaching an instability}
+\section{On the edge of catastrophe}
 
 \begin{figure}
 	\begin{center}
@@ -2064,9 +2064,14 @@ Variability in a linear world, shift of pdf, likelyhood of extremes increase dra
 	\label{fig:parabolic_theory}
 \end{figure}
 
+
+We saw how non-linear changes in extremes can occur, even when there is no tipping point. So, how will we ever be able to tell if we are approaching a tipping point?  Some claim that we will see the approach to a tipping point, because the system behaviour will begin to change. Let's build a system with a tipping point by taking an example we have already studied, temperature-dependent climate feedbacks, which we can approximate with a quadratic equation,
+
 \begin{equation}
-	N=F+\lambda_o T + b T^2
+N=F+\lambda_0 T + b T^2.
 \end{equation}
+
+Here, $\lambda_0$ is the feedback at $T=0$ and $b$ determines how the feedback changes with warming. If we choose $b=\frac{1}{2}$,  $\lambda_0 = \frac{3}{2}$, and $F=0$, we have a system in equilibrium ($N=0$) at $T=0$. But if we perturb the system with $F_C = \frac{9}{8}$ Wm$^{-2}$, we raise the imbalance curve so that it just touches the zero-intercept at $T=1.5$ K, which is an unstable equilibrium. Any positive perturbation in temperature above $1.5$ K (or additional forcing) will lead to runaway warming, as shown in Figure \ref{fig:parabolic_theory}. We can also see this reflected in the potential curves that we encountered in Chapter \ref{chapter:state-dependent}. The case with zero forcing still contains a local minimum, where our system can safely remain, but perturbing the system with the critical forcing $F_C$ leads to the limiting case, where there is no longer a local minimum in the potential.
 
 \begin{figure}
 	\begin{center}
@@ -2075,6 +2080,12 @@ Variability in a linear world, shift of pdf, likelyhood of extremes increase dra
 	\caption{ Caption } 
 	\label{fig:bifurc_parabolic}
 \end{figure}
+
+
+We can see what happens when we approach this tipping by slowly inching the mixed-layer model towards $F_C$. The orange curve in Figure \ref{fig:bifurc_parabolic} shows this slow increase in forcing, starting at an equilibrium solution of $F=1,T_{eq}=1$ and moving over 5000 monthly timesteps to just above $F_C$, where the forcing is held constant. After the mixed layer has responded to the additional $\frac{1}{8}$ Wm$^{-2}$ forcing, which still takes some time, it breaches the critical temperature $T_{C}=1.5$ and runs away to infinity.
+
+
+
 
 
 
