--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -2004,47 +2004,38 @@ But also a strong increase in extreme events of some kind would usually be consi
 
 
 \section{Climatic extremes in a linear world}
-
-Let us consider natural variability in the mixed-layer model:
+Extreme events are typically considered things that happen rarely, e.g. once a year, a decade or century. The more extreme the event is, the more rare they are, at least as long as the climate within which they occur is not changing. 
+If the climate changes it is in fact mainly during weather extremes that we spur this happening; cold-spells and heat waves imprint themselves in our memory and cause damages. Many of these extremes are associated with absolute thresholds. For instance, most mammals die from heat stress if the wet bulb temperature exceeds around 35$^\circ$C, and extreme precipitation only becomes a severe problem when the water can no longer run off in natural watersheds and existing sewers, and end up flooding things we care about. %The former is a case that hardly ever occurs in the present-day climate, but may become frequent in the future.
+As a simplest possible example, let us consider natural variability in the mixed-layer model:
 $$ C\frac{dT}{dt} = F + \lambda T + e $$
-
-
-
+\noindent where we add a flux noise term $e$ on the right hand side analogous to Chapter \ref{chapter:global_variability}. 
 In section \ref{noise-mlm} we rearranged the mixed-layer model to look like an auto-regressive process, also known as `AR(1)', that retains memory of the previous timestep via the memory parameter:
 \begin{equation}
 	\alpha = \left[1 + \frac{\Delta t \lambda }{C}  \right] 
 \end{equation}
-
-The variance of an AR(1) process is determined by this memory parameter and the driving white noise process. For the mixed layer model, this driving white noise is in the radiative forcing, $\sigma_F$, in units of Wm$^{-2}$, which we must first convert to the equivalent standard deviation in temperature by accounting for the size of the timestep and the depth of the mixed layer:
-
+\noindent The variance of an AR(1) process is determined by this memory parameter and the driving white noise process. For the mixed-layer model, this driving white noise ($e$) is in the radiative forcing, $\sigma_F$, in units of Wm$^{-2}$, which we must first convert to the equivalent standard deviation in temperature perturbations by accounting for the size of the timestep and the depth of the mixed layer:
 \begin{equation}
-\sigma_Z = \sigma_F \frac{\Delta t}{C}
+\sigma_Z = \sigma_F \frac{\Delta t}{C}.
 \end{equation}
-
 Now the total variance in the temperature can be described by:
-
 \begin{equation}
 	\sigma^{2}_T = \frac{\sigma^{2}_Z}{1 - \alpha^{2}}
+	\label{eq:sigma_linear_theory}
 \end{equation}
-
-A strong memory in the system implies $\alpha$ is close to unity, and that the variability is large ($\alpha$=1  is a pure red noise process, whose variability grows with each timestep to infinity).
-
-
-Certain aspects of climate change depend mainly on the mean state, for instance thermosteric sea level rise scales foremost with the global mean temperature. However, in many cases it is mainly during weather extremes that we spur the changing climate; cold-spells and heat waves imprint themselves in our memory and cause damages. Many of these extremes are associated with absolute thresholds. For instance, most mammals die from heat stress if the wet bulb temperature exceeds around 35$^\circ$C, and extreme precipitation only becomes a severe problem when the water can no longer run off in natural watersheds and existing sewers. The former is a case that hardly ever occurs in the present-day climate, but may become frequent in the future.
-
-Much of this can be understood from simple linear shifts in variability around a mean state. In this case the processes that cause the variability do not depend on the mean state of the system. 
-
-
-Variability in a linear world, shift of pdf, likelyhood of extremes increase dramatically
-
+A strong memory in the system implies $\alpha$ is close to unity, and that the variability is large. For the extreme case $\alpha$=1  is a pure red noise process, whose variability grows with each timestep to infinity. To demonstrate that this theoretical expression is accurate I plot the corresponding gaussian curve on top of the probability distribution of temperature from a very long run in Figure \ref{fig:variability_shift_linear}. 
+\\
 
 \begin{figure}
 	\begin{center}
 		\includegraphics[width=15 cm]{../Plots/variability_shift_distribution.pdf}
 	\end{center}
-	\caption{ Caption. } 
+	\caption{ Shifts in variability of monthly temperature in the linear mixed-layer model. Left panel shows the probability distributions of three 1,000,000 year runs with different forcing. The orange curve shows the gaussian with zero mean and standard deviation according to Equation (\ref{eq:sigma_linear_theory}). Right panel shows the predicted (solid line) and actual probability of exceeding 0.5 K for a month as a function of the longterm mean temperature.  } 
 	\label{fig:variability_shift_linear}
 \end{figure}
+
+The nice thing about the linear model is that nothing which determines the amount of variability (Equation \ref{eq:sigma_linear_theory}) depends on forcing or mean temperature, and therefore we predict that deviations around any stationary state will be the same. I plot two warmer climates in Figure \ref{fig:variability_shift_linear}, where we see that the probability distribution is simply translated to fluctuate around a new equilibrium as I add small forcing. 
+
+
 
 \section{Variability when approaching an instability}
 
