--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1996,7 +1996,7 @@ Estimate iteratively the optimal $ECS$ of the Winton-Held two-layer model runnin
 \chapter{Global variability and climate catastrophes}
 
 
-A climatic catastrophe is sometimes referred to as a forced transition of climate system to a new climate state at a rate which is more rapid than the rate of change of the external forcing (freely from {\em wikipedia}). In this case we may be thinking of some aspect of the climate that is being changed through external forcing at an accelerating rate or all of a sudden over a short period of time. One can also imagine that something which didn't happen before starts to happen. In order to qualify as a catastrophe we usually also think of it having a large negative impact on something, say society or nature, but here that is not so central.
+A climatic catastrophe is sometimes referred to as a forced transition of climate system to a new climate state at a rate which is more rapid than the rate of change of the external forcing (freely from {\em wikipedia}). In this case we may be thinking of some aspect of the climate that is being changed through external forcing at an accelerating rate or all of a sudden over a short period of time. One can also imagine that something, which didn't happen before, suddenly starts to happen. In order to qualify as a catastrophe we usually also think of it having a large negative impact on something, say society or nature, but here in this course that is not central.
 
 In recent years in particular so-called tipping points have caught attention, the idea being that there are some thresholds in the system whereat it behaves non-linearly such that going back is not as simple as just returning the forcing to what it was before. These involve bifurcations, as we studied them in Chapter \ref{chapter:state-dependent}. These cases we shall model using quadratic and qubic energy balances. 
 But also a strong increase in extreme events of some kind would usually be considered catastrophic even if this would not necessarily involve a bifurcation. We shall consider this case first as it can be modeled using the linear mixed-layer model.
@@ -2027,7 +2027,7 @@ A strong memory in the system implies $\alpha$ is close to unity, and that the v
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=15 cm]{../Plots/variability_shift_distribution.pdf}
+		\includegraphics[width=15 cm]{../Plots/variability_shift_distribution.png}
 	\end{center}
 	\caption{ Shifts in variability of monthly temperature in the linear mixed-layer model. Left panel shows the probability distributions of three 1,000,000 year runs with different forcing. The orange curve shows the gaussian with zero mean and standard deviation according to Equation (\ref{eq:sigma_linear_theory}). Right panel shows the theoretical prediction (solid line) and actual probability of exceeding 0.5 K for a month as a function of the longterm mean temperature.  } 
 	\label{fig:variability_shift_linear}
