Makes sure that pngs are being used in latex.

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -2046,7 +2046,7 @@ A challenge with detecting extremes and attributing them to a shift in climate i
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=15 cm]{../Plots/Stability_theory_parabolic}
+		\includegraphics[width=15 cm]{../Plots/Stability_theory_parabolic.png}
 	\end{center}
 	\caption{The parabolic system with temperature-dependent feedback $[\lambda_0 = -1.5, b= \frac{1}{2}]$. The black curve represents the system without forcing, which has a stable equilibrium at $T=1$ and unstable equilibrium at $T=3$, as shown by the imbalance ($N$) and potential ($V = -\int N dT$) curves. Forcing the system with $F_C = \frac{9}{8}$ Wm$^{-2}$ brings it to the stable limit, where there is no longer a local minimum in the potential.} 
 	\label{fig:parabolic_theory}
@@ -2062,7 +2062,7 @@ Here, $\lambda_0$ is the feedback at $T=0$ and $b$ determines how the feedback c
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=15 cm]{../plots/Stability_mlm}
+		\includegraphics[width=15 cm]{../plots/Stability_mlm.png}
 	\end{center}
 	\caption{The mixed layer model with temperature-dependent feedbacks is forced from an equilibrium state, $[F=1,T=1]$, slowly toward the tipping point, and held at just about the critical forcing $[F_C=\frac{9}{8}$. The orange line represents a case without variability, and the blue line a case with variability that is approximately equal to the observed variability at the top of the atmosphere. The black line has identical variability to the blue line, but rests in stable equilibrium at $[F=0,T=0]$.} 
 	\label{fig:bifurc_parabolic}
@@ -2081,7 +2081,7 @@ The noise is amplified in the system close to the tipping point, because the fee
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=15 cm]{../plots/Stability_vari_1}
+		\includegraphics[width=15 cm]{../plots/Stability_vari_1.png}
 	\end{center}
 	\caption{Probability distribution of the mixed layer model with temperature-dependent feedbacks, run for 10,000 monthly timesteps with three different forcings at the corresponding equilibrium temperature. The variability in the forcing is $\sigma_{yr} = 1$ Wm$^{-2}$. The two layer model is also shown, with $\gamma = 0.5$. The orange curve is the theoretical Gaussian distribution predicted by an auto-regressive AR(1) model, with $\alpha$ determined by Equation \ref{eq:sigma_linear_theory}.} 
 	\label{fig:variability_shift_parabolic}
@@ -2102,7 +2102,7 @@ where, for simplicity we can consider cases with $b=0$. We immediately recognize
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=15 cm]{../plots/Stability_qubicon}
+		\includegraphics[width=15 cm]{../plots/Stability_qubicon.png}
 	\end{center}
 	\caption{ Caption } 
 	\label{fig:bi-stable_timeseries}
@@ -2110,7 +2110,7 @@ where, for simplicity we can consider cases with $b=0$. We immediately recognize
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=15 cm]{../plots/Stability_theory}
+		\includegraphics[width=15 cm]{../plots/Stability_theory.png}
 	\end{center}
 	\caption{ Caption } 
 	\label{fig:bi-stable_theory}
